== 2.7.3 ==
Release date: February 8, 2023
* Enhancement: Logo Carousel - Added direction option
* Enhancement: Logo Carousel - Repeater items now show logo title instead of Logo Image text
* Fixed: Twitter Tweet - Widget stopped working after Twitter API update
* Fixed: Twitter Timeline - Widget stopped working after Twitter API update

== 2.7.2 ==
Release date: January 18, 2023
* Fixed: Compatibility issues with Elementor 3.10.0
* Enhancement: Team Member Carousel - Added Links Target option

== 2.7.1 ==
Release date: December 9, 2022
* Enhancement: Updated Elementor compatibility tags
* Enhancement: Price Menu - Updated sanitization functions
* Enhancement: Info Box Carousel - Box link structure
* Fixed: Gravity Forms - Use Ajax was not working
* Fixed: Random Image - Image alt was not printing on the page

== 2.7.0 ==
Release date: October 27, 2022
* New: Custom Cursor extension
* Fixed: Info Box Carousel - Fade effect slides overlapping issue
* Fixed: Instagram Feed - Widget was fetching maximum 25 images

== 2.6.20 ==
Release date: September 9, 2022
* Enhancement: Gravity Forms - Added option to add spacing between labels and custom radio & checkboxes
* Enhancement: Gravity Forms - Added pp_gf_shortcode_atts filter hook
* Fixed: Info Box Carousel - JS error with Equal Height option
* Fixed: Advanced Accordion - Box shadow was not working for item set as active by default

== 2.6.19 ==
Release date: August 19, 2022
* Fixed: Copy and paste styling of element prevents the page from saving after Elementor 3.7.0

== 2.6.18 ==
Release date: August 17, 2022
* Fixed: Posts - PHP error when Avoid Duplicates option is enabled
* Fixed: Icon List - Icon Vertical Alignment was not working when link is added
* Enhancement: Set the minimum Elementor version required to 3.5.0

== 2.6.17 ==
Release date: August 10, 2022
* New: Display Conditions - Condition to check new or returning visitor
* Enhancement: Added option to filter used and unused widgets in PowerPack settings